--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   width: 100%;
   margin-inline: auto;
   max-width: 80vw;
-  min-height: 100%;
+  min-height: 100vh;
 
   /* background-color: red; */
 }
