--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,12 @@
   margin-inline: auto;
   max-width: 80vw;
   min-height: 100vh;
+}
 
-  /* background-color: red; */
+.text_decoration {
+  border-bottom: 2px solid #041c32;
+  outline-offset: 8px;
+  padding-bottom: 2px;
 }
 
 /* Box sizing rules */
